[gd_scene load_steps=2 format=3 uid="uid://b73k185h7a6g5"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_5wg7n"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_5wg7n")

[node name="SpwnPositions" type="Node2D" parent="."]

[node name="SpwnPos_01" type="Marker2D" parent="SpwnPositions"]
position = Vector2(1350, 50)

[node name="SpwnPos_02" type="Marker2D" parent="SpwnPositions"]
position = Vector2(1350, 175)

[node name="SpwnPos_03" type="Marker2D" parent="SpwnPositions"]
position = Vector2(1350, 280)

[node name="SpwnPos_04" type="Marker2D" parent="SpwnPositions"]
position = Vector2(1350, 405)

[node name="SpwnPos_05" type="Marker2D" parent="SpwnPositions"]
position = Vector2(1350, 510)

[node name="SpwnPos_06" type="Marker2D" parent="SpwnPositions"]
position = Vector2(1350, 635)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
